# expression_sandbox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  manifest.xml
benchmark/: AslamExpressionSolver.cpp  Benchmarker.cpp  CeresExpressionSolver.cpp  EvalVariants.cpp  GeneratedExpressionSolver.cpp  ProjectionProblem.cpp  ProjectionProblem.hpp  StopWatch.cpp  TypedExpressionSolver.hpp  TypedExpressionSolverDepth10Eig.cpp  TypedExpressionSolverDepth10Simp.cpp  TypedExpressionSolverDepth1Eig.cpp  TypedExpressionSolverDepth1Simp.cpp  TypedExpressionSolverImpl.hpp  malloc_count.c  nrotations_1..20.csv
benchmark/N_rotations/: CeresExpressionSolver.cpp  HandTunedExpressionSolver.cpp  RotationProblem.cpp  RotationProblem.hpp  TypedExpressionSolver.hpp  TypedExpressionSolverDepth10Eig.cpp  TypedExpressionSolverDepth1Simp.cpp  TypedExpressionSolverImpl.hpp  createNumberedCppFiles.sh
benchmark/N_rotations/N/: CeresExpressionSolver.cpp.1.cpp  CeresExpressionSolver.cpp.10.cpp  CeresExpressionSolver.cpp.11.cpp  CeresExpressionSolver.cpp.12.cpp  CeresExpressionSolver.cpp.13.cpp  CeresExpressionSolver.cpp.14.cpp  CeresExpressionSolver.cpp.15.cpp  CeresExpressionSolver.cpp.16.cpp  CeresExpressionSolver.cpp.17.cpp  CeresExpressionSolver.cpp.18.cpp  CeresExpressionSolver.cpp.19.cpp  CeresExpressionSolver.cpp.2.cpp  CeresExpressionSolver.cpp.20.cpp  CeresExpressionSolver.cpp.3.cpp  CeresExpressionSolver.cpp.4.cpp  CeresExpressionSolver.cpp.5.cpp  CeresExpressionSolver.cpp.6.cpp  CeresExpressionSolver.cpp.7.cpp  CeresExpressionSolver.cpp.8.cpp  CeresExpressionSolver.cpp.9.cpp  HandTunedExpressionSolver.cpp.1.cpp  HandTunedExpressionSolver.cpp.10.cpp  HandTunedExpressionSolver.cpp.11.cpp  HandTunedExpressionSolver.cpp.12.cpp  HandTunedExpressionSolver.cpp.13.cpp  HandTunedExpressionSolver.cpp.14.cpp  HandTunedExpressionSolver.cpp.15.cpp  HandTunedExpressionSolver.cpp.16.cpp  HandTunedExpressionSolver.cpp.17.cpp  HandTunedExpressionSolver.cpp.18.cpp  HandTunedExpressionSolver.cpp.19.cpp  HandTunedExpressionSolver.cpp.2.cpp  HandTunedExpressionSolver.cpp.20.cpp  HandTunedExpressionSolver.cpp.3.cpp  HandTunedExpressionSolver.cpp.4.cpp  HandTunedExpressionSolver.cpp.5.cpp  HandTunedExpressionSolver.cpp.6.cpp  HandTunedExpressionSolver.cpp.7.cpp  HandTunedExpressionSolver.cpp.8.cpp  HandTunedExpressionSolver.cpp.9.cpp  (+100 more)
benchmark/one_rotation_projection/: AslamExpressionSolver.cpp  AslamExpressionSolver.hpp  CeresExpressionSolver.cpp  GeneratedExpressionSolver.cpp  HandTunedExpressionSolver.cpp  ProjectionProblem.cpp  ProjectionProblem.hpp  TypedExpressionSolverImpl.hpp  generate_expression.py  test_pge.cpp
benchmark/two_rotations_projection/: AslamExpressionSolver.hpp  CeresExpressionSolver.cpp  GeneratedExpressionSolver.cpp  ProjectionProblem.cpp  ProjectionProblem.hpp  TypedExpressionSolver.hpp  TypedExpressionSolverDepth1Eig.cpp  TypedExpressionSolverImpl.hpp  expr_paul.py  test_pge.cpp
include/: optimize_pow.hpp
include/benchmark/: Benchmarker.hpp  DummySolver.hpp  EvalVariants.hpp  Problem.hpp  ProblemSolver.hpp  StopWatch.hpp
include/expressions/: ExpressionImpl.h  Expressions.h  PaulsGeneratedError.h  PaulsGeneratedErrorInTangentSpace.h  ProjectionError.h
include/typed_expressions/: Derivatives.hpp  EigenLinalg.hpp  EuclideanPoint.hpp  EuclideanRotation.hpp  EuclideanSpace.hpp  SimpleLinalg.hpp  SimpleLinalgWithEigenAdapter.hpp  TypedExpressions.hpp  UnitQuaternions.hpp
plots/: createBenchmarkPlots.py  createBenchmarkPlots.py.launch  createSealsPlots.py  createSealsPlots.py.launch
plots/common/: __init__.py
seals/: .gitignore  create_stat.sh  get_data.sh  optimise_rotations.cpp  rotation_errors.cpp  rotation_errors.h  rotation_errors_tex.h  run_ensemble.sh  run_optim.sh  stat.csv  states.cpp  states.h
src/: CeresExpression.cpp  ErrorTerm.py  ExpressionImpl.cpp  Expressions.cpp  Quaternions.py  TestTypedExpressions.cpp  expr_paul.py  test.cpp  test_expr.py  test_pe.cpp  test_pge.cpp
test/: TestEuclideanPointsAndScalars.cpp  TestQuaternions.cpp  TestRotations.cpp  TestTools.cpp  TestTools.hpp  requirements.cpp
